# example-package-sledd

./: README.md  changelog.md  pyproject.toml
src/example_package_sledd/: __init__.py  rescale.py
tests/: test_rescale.py
