# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_sledd"  
dependencies = ["numpy"]
dynamic = ["version"] 

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch]
version.path = "src/example_package_sledd/__init__.py"
